backend/yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-backendd
  labels:
    app: sample-backendd
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-backendd
  template:
    metadata:
      labels:
        app: sample-backendd
        version: v1.0.0
      annotations:
        prometheus.io/scrape: "true"
    spec:
      containers:
      - name: sample-backendd
        image: ariyant/sample-backend:1.0.0
        ports:
        - name: http
          containerPort: 8083
