backend/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample-backendd
  name: sample-backendd
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8083
  selector:
    app: sample-backendd
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
